k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: redemption
  labels:
    app.kubernetes.io/name: redemption
    app.kubernetes.io/part-of: cloud-engineer-assessment
