k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redemption
  namespace: redemption
  labels:
    app.kubernetes.io/name: redemption
spec:
  type: ClusterIP
  selector:
    app: redemption
  ports:
    - port: 80
      targetPort: 8080
